// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedControl renders 1`] = `
<div
  className="SegmentedControl medium"
  role="tablist"
>
  <button
    aria-selected={true}
    className="item hideOutline itemIsSelected accessibilityOutline"
    onClick={[Function]}
    role="tab"
    style={
      Object {
        "width": "25%",
      }
    }
    type="button"
  >
    <div
      className="Text fontSize200 defaultText alignCenter breakWord fontWeightBold"
    >
      News
    </div>
  </button>
  <button
    aria-selected={false}
    className="item hideOutline itemIsNotSelected accessibilityOutline"
    onClick={[Function]}
    role="tab"
    style={
      Object {
        "width": "25%",
      }
    }
    type="button"
  >
    <div
      className="Text fontSize200 defaultText alignCenter breakWord fontWeightBold"
    >
      You
    </div>
  </button>
  <button
    aria-selected={false}
    className="item hideOutline itemIsNotSelected accessibilityOutline"
    onClick={[Function]}
    role="tab"
    style={
      Object {
        "width": "25%",
      }
    }
    type="button"
  >
    <div
      className="Text fontSize200 defaultText alignCenter breakWord fontWeightBold"
    >
      Messages
    </div>
  </button>
  <button
    aria-selected={false}
    className="item hideOutline itemIsNotSelected accessibilityOutline"
    onClick={[Function]}
    role="tab"
    style={
      Object {
        "width": "25%",
      }
    }
    type="button"
  >
    <div
      className="box justifyCenter xsDisplayFlex"
    >
      <div />
    </div>
  </button>
</div>
`;

exports[`SegmentedControl with responsive widths renders 1`] = `
<div
  className="SegmentedControl medium"
  role="tablist"
>
  <button
    aria-selected={true}
    className="item hideOutline itemIsSelected accessibilityOutline"
    onClick={[Function]}
    role="tab"
    style={
      Object {
        "width": undefined,
      }
    }
    type="button"
  >
    <div
      className="Text fontSize200 defaultText alignCenter breakWord fontWeightBold"
    >
      Short
    </div>
  </button>
  <button
    aria-selected={false}
    className="item hideOutline itemIsNotSelected accessibilityOutline"
    onClick={[Function]}
    role="tab"
    style={
      Object {
        "width": undefined,
      }
    }
    type="button"
  >
    <div
      className="Text fontSize200 defaultText alignCenter breakWord fontWeightBold"
    >
      Really really really long title
    </div>
  </button>
</div>
`;
